--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -188,8 +188,8 @@ S_B_1 : "⛩️𝗛𝗜𝗝𝗔𝗖𝗞 𝗠𝗘⛩️"
 S_B_2 : "𝗦𝗨𝗣𝗣𝗢𝗥𝗧⚡"
 S_B_3 : "⛩️𝗛𝗜𝗝𝗔𝗖𝗞 𝗠𝗘⛩️"
 S_B_4 : "𝗔𝗕𝗜𝗟𝗜𝗧𝗜𝗘𝗦📚"
-S_B_5 : "𝗢𝗪𝗡𝗘𝗥🎓"
-S_B_6 : "𝗦𝗨𝗣𝗣𝗢𝗥𝗧⚡"
+S_B_5 : "ᴜᴘᴅᴀᴛᴇꜱ"
+S_B_6 : "ʀᴇᴘᴏʀᴛ"
 S_B_7 : "ʀᴇᴘᴏ"
 S_B_8 : "ʏᴏᴜᴛᴜʙᴇ"
 S_B_9 : "sᴜᴘᴘᴏʀᴛ"
